# tipToe

./: CMakeLists.txt
src/: initDialog.cpp  initDialog.h  initSDL.cpp  main.cpp
src/app/: appmain.cpp  appmain.h
